<resources>
    <string name="app_name">Gene Care</string>
    <string name="map_api_key">AIzaSyCbc2Y5AIwZ8uUeHRUXiozGN3CnpjKT0oI</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="user_name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="you_already_have_an_account_log_in">Already have an account! login</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="bank_account">Bank account </string>
    <string name="terms_and_conditions">Terms of use</string>
    <string name="about_app">About Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>

    <string name="skip">skip</string>

    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="back">Back</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="em_exist">Email or Phone number is exist</string>
    <string name="profile">Profile</string>
    <string name="general_settings">General Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language_settings">Language Settings</string>
    <string name="no_details">No details</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Account Name</string>
    <string name="account_iban">Account IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="ok">OK</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="done">Done</string>

    <string name="next">Next</string>

    <string name="name">Name</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="location">Location on map</string>
    <string name="share">share</string>
    <string name="edit">Edit</string>
    <string name="price">Price : </string>
    <string name="delete">Delete</string>
    <string name="change_language">Change language</string>
    <string name="detials">Details</string>
    <string name="register">Register</string>
    <string name="upload_image">Upload Image</string>
    <string name="ads_photos">Ads Photos</string>
    <string name="about">About</string>
    <string name="time">Time</string>
    <string name="map">map</string>
    <string name="share_in">Share in</string>

    <string name="blokced">User is blocked</string>
    <string name="enter_code">Enter code</string>
    <string name="we_ll_never_share_or_sell_your_phone_number_your_privacy_is_100_guaranteed">We\'ll never share or sell your phone number your privacy is 100% guaranteed.</string>
    <string name="enter_the_sms_verification_code_below_that_was_sent_to_your_mobile_phone">Enter the SMS verification code below that was sent to your mobile phone</string>
    <string name="inc_code_verification">Incorrect code verification</string>
    <string name="you_will_receive_4_digit">You will receive 4 digit code on your mobile</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="inc_code">Incorrect code</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="since">since</string>
    <string name="no_name">No name</string>
    <string name="more_details">More details :</string>
    <string name="no_search_result">No search result</string>
    <string name="search_results">Search results</string>
    <string name="result">Results</string>
    <string name="from">From</string>
    <string name="no_categories_to_display">No categories to display</string>
    <string name="sms">Sms</string>
    <string name="sign_out">Sign out</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="wil_rev_req">Will review your request by admin</string>
    <string name="add_photo">Add photo</string>
    <string name="category">Category</string>
    <string name="city">City</string>
    <string name="ch_city">Choose city</string>
    <string name="ch">Choose</string>
    <string name="select">Select</string>
    <string name="select_picture">Select picture</string>
    <string name="approved">Approved</string>
    <string name="no_notifications_to_display">No notifications to display</string>

    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">Minute Ago</string>
    <string name="min">Minute</string>
    <string name="an_hour_ago">An Hour Ago</string>
    <string name="hs">Hour</string>
    <string name="yesterday">Yesterday</string>
    <string name="day">day</string>
    <string name="type_a_message">type a message....</string>
    <string name="img_sent">image sent</string>
    <string name="pass_short">password too short</string>
    <string name="code">Code</string>
    <string name="create_an_account">Create an account</string>
    <string name="about_me">About me</string>
    <string name="accept_terms_and_conditions">Accept terms and conditions</string>
    <string name="ch_exper">Choose experience</string>
    <string name="ch_dept">Choose department</string>
    <string name="cnt_sign_accept">You can\'t sign up without accepting terms and conditions</string>
    <string name="services">Services</string>
    <string name="caregivers">Caregivers</string>
    <string name="careseekers">CareSeekers</string>
    <string name="no_service">No service</string>
    <string name="no_orders">No orders</string>
    <string name="orders">Orders</string>
    <string name="pending">Pending</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="about_us">About Us</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="subject">Subject</string>
    <string name="user_email">Your Email</string>
    <string name="language_setting">Change Language</string>

    <string name="Make_Order">Make Order</string>
    <string name="Service_name">Service Name</string>
    <string name="date">Date</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="any">Any</string>
    <string name="address">Address</string>
    <string name="another_phone">Another Phone Number</string>
    <string name="description">Description</string>
    <string name="Payment_ways">Payment Ways</string>
    <string name="MasterCard">Master Card</string>
    <string name="vodafoneCash">Vodafone Cash</string>
    <string name="Fawry">Fawry</string>
    <string name="CashMoney">Cash Money</string>
    <string name="ch_gender">Choose gender</string>
    <string name="Cancel">Cancel</string>
    <string name="all_services_are_reserved_for_homecare_app">All rights are reserved for this App</string>
    <string name="send_order">Send order</string>
    <string name="user_not_found">User not found</string>
    <string name="user_bloked">User is blocked</string>
    <string name="show_details">Show details</string>
    <string name="no_patient">No-Patients : </string>
    <string name="le">EGP</string>
    <string name="account">Account</string>
    <string name="profile_settings">Profile settings</string>
    <string name="feedback">Feedback</string>
    <string name="gender2">Gender</string>
    <string name="serv_only">Service is for providers only</string>
    <string name="personal_information">Personal information</string>
    <string name="education_amp_certificate"><![CDATA[Education & Certificate]]></string>
    <string name="price2">Price</string>
    <string name="times">times: </string>
    <string name="age">Age (patients)</string>
    <string name="ch_num_tim">Choose number of times</string>
    <string name="ch_num_pat">Choose number of patients</string>
    <string name="ch_date">Choose date</string>
    <string name="ch_type">Choose time</string>
    <string name="gender_providers">Gender (providers)</string>
    <string name="ch_prov_gen">Choose provider gender</string>
    <string name="ch_pay_way">Choose payment way</string>
    <string name="total">Total :</string>
    <string name="order_sent">Order sent successfully!</string>
    <string name="no_time">No-times</string>
    <string name="no_patients">No-patients</string>
    <string name="sorry_no_prov">Sorry,There are no providers.Please try again later.</string>
    <string name="order_details">Order details</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="accept">Accept</string>
    <string name="client_details">Client details:</string>
    <string name="provider_details">Provider details :</string>
    <string name="order_is_pending">Order is pending</string>
    <string name="no_descriptions">No descriptions</string>
    <string name="num_times">Num-times : </string>
    <string name="av_for_proider">Available for providers</string>
    <string name="ser_av_prov">Service available for providers</string>
    <string name="refuse">Refuse</string>
    <string name="end_order">End order</string>
    <string name="add_comment">Add comment</string>
    <string name="add_rate">Add rate</string>
    <string name="no_comments">No comments</string>
    <string name="any2">both</string>
    <string name="new_order">New order</string>
    <string name="order_accepted">your order accepted</string>
    <string name="ord_pen">Order is pending</string>
    <string name="client_order_cancel">The request was canceled from the client</string>
    <string name="provider_order_cancel">The request was canceled from the service provider</string>
    <string name="rate_provider">Request completed, rate</string>
    <string name="have_rating">You rated</string>
    <string name="thanks_for_using_homecare_app">Thanks for using\n<font color="#00d4a8">GeneCare App</font></string>
    <string name="hour">Hour</string>
    <string name="ch_num_shift">Choose number of shifts</string>
    <string name="num_shifts">Home shifts</string>
    <string name="provider_registration">Provider registration</string>
    <string name="client_registration">Client registration</string>
    <string name="exper">Experience</string>
    <string name="year">Year</string>


</resources>
