<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="50dp"
            android:layout_height="45dp"
            android:clickable="false"
            android:longClickable="false"
            android:padding="13dp"
            android:src="@drawable/ic_left_arrow"
            android:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/Make_Order"
            android:textColor="@color/white"
            android:textSize="16sp"

            />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/order_bg"
        android:fillViewport="true"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="150dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/edtService_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/linear_shape"
                android:gravity="center_vertical"
                android:hint="@string/Service_name"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"


                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_price"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/linear_shape"
                    android:hint="@string/price2"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/linear_shape">

                    <Spinner
                        android:id="@+id/spinnerNumberOfTime"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:backgroundTint="@color/colorPrimary"

                        />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lldate"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/linear_shape"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:clickable="false"
                        android:gravity="center_vertical"
                        android:hint="@string/date"
                        android:longClickable="false"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="15sp"


                        />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".25"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="8dp"
                        android:rotation="90"
                        android:src="@drawable/ic_calendar"
                        android:tint="@color/colorPrimary"

                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lltime"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/linear_shape"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".75"
                        android:clickable="false"
                        android:gravity="center_vertical"
                        android:hint="@string/time"
                        android:longClickable="false"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="15sp"


                        />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".25"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="8dp"
                        android:rotation="90"
                        android:src="@drawable/ic_clock"
                        android:tint="@color/colorPrimary"

                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtAge"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/linear_shape"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    />

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/linear_shape">

                    <Spinner
                        android:id="@+id/spinnerNumberOfPatient"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:backgroundTint="@color/colorPrimary"

                        />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/rb_bg"
                        android:padding="8dp"
                        android:text="@string/male"
                        android:textColor="@color/gray4"
                        android:textSize="17sp" />


                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/rb_bg"
                        android:padding="8dp"
                        android:text="@string/female"
                        android:textColor="@color/gray4"
                        android:textSize="17sp" />

                    <RadioButton
                        android:id="@+id/rb_any"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/rb_bg"
                        android:padding="8dp"
                        android:text="@string/any"
                        android:textColor="@color/gray4"
                        android:textSize="17sp" />


                </RadioGroup>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/linear_shape"
                android:gravity="center_vertical"
                android:hint="@string/address"
                android:imeOptions="actionSearch"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray4"
                android:textSize="14sp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/select_location_on_map"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="15dp" />

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/linear_shape"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"


                />

            <EditText
                android:id="@+id/edtAnotherPhone"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/linear_shape"
                android:hint="@string/another_phone"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"


                />

            <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/small_round_bg"
                android:gravity="top"
                android:hint="@string/description"
                android:padding="10dp"
                android:singleLine="false"
                android:textColor="@color/black"
                android:textSize="14sp"


                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Payment_ways"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMasterCard"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/rb_bg"
                        android:padding="8dp"
                        android:text="@string/MasterCard"
                        android:textColor="@color/gray4"
                        android:textSize="17sp" />


                    <RadioButton
                        android:id="@+id/rbVodafoneCash"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/rb_bg"
                        android:padding="8dp"
                        android:text="@string/vodafoneCash"
                        android:textColor="@color/gray4"
                        android:textSize="17sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbFawry"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/rb_bg"
                        android:padding="8dp"
                        android:text="@string/Fawry"
                        android:textColor="@color/gray4"
                        android:textSize="17sp" />

                    <RadioButton
                        android:id="@+id/rb_CashMoney"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/rb_bg"
                        android:padding="8dp"
                        android:text="@string/CashMoney"
                        android:textColor="@color/gray4"
                        android:textSize="17sp" />

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_login"
                android:text="@string/send"
                android:textColor="@android:color/white"
                android:textSize="15sp"

                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

