<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/add_rate"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray3" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            app:civ_circle_background_color="@color/white"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/colorPrimary"
            android:src="@drawable/logo"
            />
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            />

        <com.iarcuschin.simpleratingbar.SimpleRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            app:srb_starsSeparation="5dp"
            app:srb_starSize="30dp"
            app:srb_stepSize=".5"
            app:srb_starBorderWidth="3"
            app:srb_isIndicator="false"
            app:srb_numberOfStars="5"
            app:srb_fillColor="@color/colorPrimary"
            app:srb_borderColor="@color/colorPrimary"
            app:srb_starBackgroundColor="@color/white"


            />

        <TextView
            android:id="@+id/tvRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"

            />

        <EditText
            android:id="@+id/edtComment"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/small_round_bg"
            android:gravity="top"
            android:padding="8dp"
            android:hint="@string/add_comment"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/gray4"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textSize="14sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            >
            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                android:background="@color/colorPrimary"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="15sp" />
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="35dp"
                android:background="@color/white"
                android:text="@string/cancel"
                android:textColor="@color/gray4"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>
</layout>
